--- a/example/index.html
+++ b/example/index.html
@@ -9,6 +9,9 @@
     <div id="app">
       <div v-if="isSignedIn">
         <button @click="logout()" type="button">Logout</button>
+        <button @click="grantOfflineAccess()" type="button">
+          Grant Offline Access
+        </button>
         {{ userName }}
       </div>
       <button
@@ -40,7 +43,12 @@
         },
         methods: {
           login() {
-            this.$gapi.login()
+            this.$gapi.login().then((response) => {
+              console.log('login', response)
+            })
+          },
+          grantOfflineAccess() {
+            this.$gapi.grantOfflineAccess()
           },
           logout() {
             this.$gapi.logout()
