--- a/example/index.html
+++ b/example/index.html
@@ -7,19 +7,25 @@
   </head>
   <body>
     <div id="app">
-      <div v-if="isSignedIn">
-        <button @click="logout()" type="button">Logout</button>
-        {{ userName }}
-      </div>
-      <button
-        :disabled="isSignedIn === null"
-        @click="login()"
-        type="button"
-        v-if="!isSignedIn"
-      >
-        Login
-      </button>
+      <login />
     </div>
+
+    <script type="text/x-template" id="login-template">
+      <div>
+        <div v-if="isSignedIn">
+          <button @click="logout()" type="button">Logout</button>
+          {{ userName }}
+        </div>
+        <button
+          :disabled="isSignedIn === null"
+          @click="login()"
+          type="button"
+          v-if="!isSignedIn"
+        >
+          Login
+        </button>
+      </div>
+    </script>
 
     <script>
       Vue.use(VueGapi.default, {
@@ -28,19 +34,27 @@
         scope: 'https://www.googleapis.com/auth/photoslibrary.readonly',
       })
 
-      const app = new Vue({
-        el: '#app',
-        data: {
-          isSignedIn: null,
+      Vue.component('login', {
+        template: '#login-template',
+        data() {
+          return {
+            isSignedIn: null,
+          }
         },
         computed: {
           userName() {
-            return this.$gapi.getUserData().firstName
+            const user = this.$gapi.getUserData()
+
+            if (user) {
+              return user.firstName
+            }
           },
         },
         methods: {
           login() {
-            this.$gapi.login()
+            this.$gapi.login().then(({ currentUser, hasGrantedScopes }) => {
+              console.log({ currentUser, hasGrantedScopes })
+            })
           },
           logout() {
             this.$gapi.logout()
@@ -52,6 +66,8 @@
           })
         },
       })
+
+      new Vue({ el: '#app' })
     </script>
   </body>
 </html>
