--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="Google API Client Library wrapper for Vue.js">
     
-    <link rel="preload" href="/vue-gapi/assets/css/0.styles.93730312.css" as="style"><link rel="preload" href="/vue-gapi/assets/js/app.49a959f5.js" as="script"><link rel="preload" href="/vue-gapi/assets/js/6.94239f55.js" as="script"><link rel="prefetch" href="/vue-gapi/assets/js/10.b602ef2b.js"><link rel="prefetch" href="/vue-gapi/assets/js/11.5166ab68.js"><link rel="prefetch" href="/vue-gapi/assets/js/12.b891a7cf.js"><link rel="prefetch" href="/vue-gapi/assets/js/2.8ff106e7.js"><link rel="prefetch" href="/vue-gapi/assets/js/3.c2580abb.js"><link rel="prefetch" href="/vue-gapi/assets/js/4.e122e238.js"><link rel="prefetch" href="/vue-gapi/assets/js/5.1fce9830.js"><link rel="prefetch" href="/vue-gapi/assets/js/7.b3a7d017.js"><link rel="prefetch" href="/vue-gapi/assets/js/8.0d73d77b.js"><link rel="prefetch" href="/vue-gapi/assets/js/9.f3d35010.js">
-    <link rel="stylesheet" href="/vue-gapi/assets/css/0.styles.93730312.css">
+    <link rel="preload" href="/vue-gapi/assets/css/0.styles.5ea980e5.css" as="style"><link rel="preload" href="/vue-gapi/assets/js/app.b5483d82.js" as="script"><link rel="preload" href="/vue-gapi/assets/js/6.94239f55.js" as="script"><link rel="prefetch" href="/vue-gapi/assets/js/10.b602ef2b.js"><link rel="prefetch" href="/vue-gapi/assets/js/11.5166ab68.js"><link rel="prefetch" href="/vue-gapi/assets/js/12.b891a7cf.js"><link rel="prefetch" href="/vue-gapi/assets/js/2.8ff106e7.js"><link rel="prefetch" href="/vue-gapi/assets/js/3.c2580abb.js"><link rel="prefetch" href="/vue-gapi/assets/js/4.e122e238.js"><link rel="prefetch" href="/vue-gapi/assets/js/5.1fce9830.js"><link rel="prefetch" href="/vue-gapi/assets/js/7.b3a7d017.js"><link rel="prefetch" href="/vue-gapi/assets/js/8.0d73d77b.js"><link rel="prefetch" href="/vue-gapi/assets/js/9.f3d35010.js">
+    <link rel="stylesheet" href="/vue-gapi/assets/css/0.styles.5ea980e5.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/vue-gapi/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/vue-gapi/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/vue-gapi/assets/js/app.49a959f5.js" defer></script><script src="/vue-gapi/assets/js/6.94239f55.js" defer></script>
+    <script src="/vue-gapi/assets/js/app.b5483d82.js" defer></script><script src="/vue-gapi/assets/js/6.94239f55.js" defer></script>
   </body>
 </html>
