deploy: b91fccdb72000e2b170a3c9df6cd731c5d7efe20

--- a/404.html
+++ b/404.html
@@ -23,11 +23,11 @@
 			}
     </script>
     <title>VueGapi</title><meta name="description" content="Google API Client Library wrapper for Vue.js">
-    <link rel="modulepreload" href="/vue-gapi/assets/app.ef994315.js"><link rel="modulepreload" href="/vue-gapi/assets/404.html.f166316b.js"><link rel="modulepreload" href="/vue-gapi/assets/404.html.1ac3bf4f.js">
+    <link rel="modulepreload" href="/vue-gapi/assets/app.318c97b8.js"><link rel="modulepreload" href="/vue-gapi/assets/404.html.f166316b.js"><link rel="modulepreload" href="/vue-gapi/assets/404.html.1eb1f23b.js">
     <link rel="stylesheet" href="/vue-gapi/assets/style.96337e02.css">
   </head>
   <body>
-    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>How did we get here?</blockquote><a href="/vue-gapi/" class="">Take me home</a></div></div><!----><!--]--></div>
-    <script type="module" src="/vue-gapi/assets/app.ef994315.js" defer></script>
+    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>There&#39;s nothing here.</blockquote><a href="/vue-gapi/" class="">Take me home</a></div></div><!----><!--]--></div>
+    <script type="module" src="/vue-gapi/assets/app.318c97b8.js" defer></script>
   </body>
 </html>
