--- a/404.html
+++ b/404.html
@@ -23,11 +23,11 @@
 			}
     </script>
     <title>VueGapi</title><meta name="description" content="Google API Client Library wrapper for Vue.js">
-    <link rel="modulepreload" href="/vue-gapi/assets/app.2effcce0.js"><link rel="modulepreload" href="/vue-gapi/assets/404.html.f166316b.js"><link rel="modulepreload" href="/vue-gapi/assets/404.html.a76c699d.js">
+    <link rel="modulepreload" href="/vue-gapi/assets/app.3d1723a4.js"><link rel="modulepreload" href="/vue-gapi/assets/404.html.f166316b.js"><link rel="modulepreload" href="/vue-gapi/assets/404.html.15202831.js">
     <link rel="stylesheet" href="/vue-gapi/assets/style.96337e02.css">
   </head>
   <body>
-    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>There&#39;s nothing here.</blockquote><a href="/vue-gapi/" class="">Take me home</a></div></div><!----><!--]--></div>
-    <script type="module" src="/vue-gapi/assets/app.2effcce0.js" defer></script>
+    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>Looks like we&#39;ve got some broken links.</blockquote><a href="/vue-gapi/" class="">Take me home</a></div></div><!----><!--]--></div>
+    <script type="module" src="/vue-gapi/assets/app.3d1723a4.js" defer></script>
   </body>
 </html>
