--- a/404.html
+++ b/404.html
@@ -23,11 +23,11 @@
 			}
     </script>
     <title>VueGapi</title><meta name="description" content="Google API Client Library wrapper for Vue.js">
-    <link rel="modulepreload" href="/vue-gapi/assets/app.5e75913b.js"><link rel="modulepreload" href="/vue-gapi/assets/404.html.f166316b.js"><link rel="modulepreload" href="/vue-gapi/assets/404.html.1045cf1e.js">
+    <link rel="modulepreload" href="/vue-gapi/assets/app.42ebaa71.js"><link rel="modulepreload" href="/vue-gapi/assets/404.html.f166316b.js"><link rel="modulepreload" href="/vue-gapi/assets/404.html.24b26ac1.js">
     <link rel="stylesheet" href="/vue-gapi/assets/style.96337e02.css">
   </head>
   <body>
-    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>There&#39;s nothing here.</blockquote><a href="/vue-gapi/" class="">Take me home</a></div></div><!----><!--]--></div>
-    <script type="module" src="/vue-gapi/assets/app.5e75913b.js" defer></script>
+    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>That&#39;s a Four-Oh-Four.</blockquote><a href="/vue-gapi/" class="">Take me home</a></div></div><!----><!--]--></div>
+    <script type="module" src="/vue-gapi/assets/app.42ebaa71.js" defer></script>
   </body>
 </html>
